# NauKernelTest

./: CMakeLists.txt  README.md  main.cpp
Data/: Components.h  Entity.h
Entities/: Entity.h
Entities/Data/: IComponent.h  TransformComponent.cpp
Logic/: Scene.cpp  Scene.h
Logic/Systems/: MovementSystem.cpp  MovementSystem.h
